# Moxin-Translator

./: .gitignore  Cargo.toml  LICENSE  README.md
apps/moxin-translator/: Cargo.toml
apps/moxin-translator/dataflow/: translation_qwen35.yml
apps/moxin-translator/src/: app_preferences.rs  app_update.rs  audio_player.rs  bounded_drop_down.rs  dora_integration.rs  lib.rs  screen.rs  task_persistence.rs  training_executor.rs  training_manager.rs  transcript_export.rs  tts_history.rs  voice_clone_modal.rs  voice_data.rs  voice_persistence.rs  voice_selector.rs
apps/moxin-voice/src/: app_preferences.rs  audio_player.rs  lib.rs  screen.rs  transcript_export.rs  tts_emotion.rs  voice_data.rs
docs/getting-started/: QUICKSTART_MACOS.md
docs/superpowers/plans/: 2026-06-24-customvoice-instruct-editor.md  (+2 more)
libs/dora-common/: README.md
moxin-dora-bridge/src/: data.rs  lib.rs  parser.rs  shared_state.rs
moxin-init/: Cargo.toml
moxin-init/src/: main.rs
moxin-translator-shell/: Cargo.toml
moxin-translator-shell/src/: app.rs  main.rs
moxin-ui/: Cargo.toml
moxin-ui/src/: app_data.rs  lib.rs  registry.rs  theme.rs
moxin-voice-shell/src/: app.rs
moxin-widgets/src/: app_trait.rs  lib.rs  theme.rs  translation_overlay.rs
node-hub/dora-qwen3-asr/: Cargo.toml
node-hub/dora-qwen3-asr/src/: main.rs
node-hub/dora-qwen35-translator/: Cargo.toml
scripts/: build_macos_app.sh  build_macos_dmg.sh  init_qwen3_models.sh  macos_bootstrap.sh  macos_install_update.sh  macos_preflight.sh  test_app_update_smoke.sh
scripts/diagnostics/: sample_mem.sh
(+35 files in other folders)
